link store update lemonsqueezy

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                   class="products_grid"
                 >
                   <a
-                    href="https://finterface.gumroad.com/l/finpal"
+                    href="https://finterface.lemonsqueezy.com/buy/75bc53fd-b4aa-4b86-a517-85433852559e"
                     target="_blank"
                     class="products_card-link w-inline-block"
                     ><img
@@ -548,7 +548,7 @@
                     </div></a
                   ><a
                     id="w-node-_95cdb70f-31ce-0dee-f756-1a651eb09695-ab675f6b"
-                    href="https://finterface.gumroad.com/l/midasmind"
+                    href="https://finterface.lemonsqueezy.com/buy/c7708232-06a4-4181-a61c-beb7b2b38543"
                     target="_blank"
                     class="products_card-link w-inline-block"
                     ><img
