--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!-- Last Published: Thu Oct 17 2024 01:17:21 GMT+0000 (Coordinated Universal Time) -->
+<!-- Last Published: Tue Oct 29 2024 09:08:35 GMT+0000 (Coordinated Universal Time) -->
 <html
-  data-wf-domain="www.finterface.pro"
+  data-wf-domain="finterface.webflow.io"
   data-wf-page="66fa9907e9d8abb5ab675f6b"
   data-wf-site="66fa9907e9d8abb5ab675f6f"
 >
@@ -114,24 +114,24 @@
           }
 
           /* 
-    Make the following elements inherit typography styles from the parent and not have hardcoded values. 
-    Important: You will not be able to style for example "All Links" in Designer with this CSS applied.
-    Uncomment this CSS to use it in the project. Leave this message for future hand-off.
-    */
+  Make the following elements inherit typography styles from the parent and not have hardcoded values. 
+  Important: You will not be able to style for example "All Links" in Designer with this CSS applied.
+  Uncomment this CSS to use it in the project. Leave this message for future hand-off.
+  */
           /*
-    a,
-    .w-input,
-    .w-select,
-    .w-tab-link,
-    .w-nav-link,
-    .w-dropdown-btn,
-    .w-dropdown-toggle,
-    .w-dropdown-link {
-      color: inherit;
-      text-decoration: inherit;
-      font-size: inherit;
-    }
-    */
+  a,
+  .w-input,
+  .w-select,
+  .w-tab-link,
+  .w-nav-link,
+  .w-dropdown-btn,
+  .w-dropdown-toggle,
+  .w-dropdown-link {
+    color: inherit;
+    text-decoration: inherit;
+    font-size: inherit;
+  }
+  */
 
           /* Apply "..." after 3 lines of text */
           .text-style-3lines {
@@ -577,6 +577,45 @@
                       </div>
                       <div class="text-size-lg text-weight-bold">
                         midasmind: AI Investing &amp; Roboadvisor App UI Kit
+                      </div>
+                      <div class="products_card-metadata">
+                        <div class="text-color-gray60">Figma (.fig)</div>
+                        <div class="text-size-lg text-weight-black">
+                          $35 USD
+                        </div>
+                      </div>
+                    </div></a
+                  ><a
+                    id="w-node-_91075314-c4a9-3c4e-e35c-d5769314b2f4-ab675f6b"
+                    href="https://finterface.lemonsqueezy.com/buy/45824b54-e3e1-4a06-8879-6034695c5e1d"
+                    target="_blank"
+                    class="products_card-link w-inline-block"
+                    ><img
+                      src="https://cdn.prod.website-files.com/66fa9907e9d8abb5ab675f6f/6720803fba1ed3984ef6f072_800x600_simple-min.jpg"
+                      loading="lazy"
+                      width="800"
+                      height="Auto"
+                      alt="swiftbank thumbnail"
+                      srcset="
+                        https://cdn.prod.website-files.com/66fa9907e9d8abb5ab675f6f/6720803fba1ed3984ef6f072_800x600_simple-min-p-500.jpg 500w,
+                        https://cdn.prod.website-files.com/66fa9907e9d8abb5ab675f6f/6720803fba1ed3984ef6f072_800x600_simple-min.jpg       800w
+                      "
+                      sizes="(max-width: 479px) 93vw, (max-width: 767px) 95vw, (max-width: 991px) 46vw, 29vw"
+                      class="products_card-img"
+                    />
+                    <div class="products_card-text">
+                      <div class="products_card-tag">
+                        <div
+                          id="w-node-_9204fa81-47ba-2f87-3002-4591670b4da3-670b4da3"
+                          class="badge-lg"
+                        >
+                          <div class="text-size-sm text-weight-semibold">
+                            Banking
+                          </div>
+                        </div>
+                      </div>
+                      <div class="text-size-lg text-weight-bold">
+                        swiftbank: Smart Banking &amp; Payments App UI Kit
                       </div>
                       <div class="products_card-metadata">
                         <div class="text-color-gray60">Figma (.fig)</div>
@@ -1319,7 +1358,7 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.prod.website-files.com/66fa9907e9d8abb5ab675f6f/js/webflow.c6d046356.js"
+      src="https://cdn.prod.website-files.com/66fa9907e9d8abb5ab675f6f/js/webflow.a61f2b4a9.js"
       type="text/javascript"
     ></script>
     <style>
