--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Last Published: Tue Oct 29 2024 09:08:35 GMT+0000 (Coordinated Universal Time) -->
+<!-- Last Published: Sat Nov 09 2024 10:57:00 GMT+0000 (Coordinated Universal Time) -->
 <html
   data-wf-domain="finterface.webflow.io"
   data-wf-page="66fa9907e9d8abb5ab675f6b"
@@ -616,6 +616,45 @@
                       </div>
                       <div class="text-size-lg text-weight-bold">
                         swiftbank: Smart Banking &amp; Payments App UI Kit
+                      </div>
+                      <div class="products_card-metadata">
+                        <div class="text-color-gray60">Figma (.fig)</div>
+                        <div class="text-size-lg text-weight-black">
+                          $35 USD
+                        </div>
+                      </div>
+                    </div></a
+                  ><a
+                    id="w-node-_10f38a89-1c9d-9a07-9a4c-0e27ff3cfdbe-ab675f6b"
+                    href="https://finterface.lemonsqueezy.com/buy/4a097ef5-21b4-4d82-b8f5-54b65c99da9f"
+                    target="_blank"
+                    class="products_card-link w-inline-block"
+                    ><img
+                      src="https://cdn.prod.website-files.com/66fa9907e9d8abb5ab675f6f/672f3e11af442fb4f58b92fb_800x600_simple-min.jpg"
+                      loading="lazy"
+                      width="800"
+                      height="Auto"
+                      alt="cognicart image thumbnail"
+                      srcset="
+                        https://cdn.prod.website-files.com/66fa9907e9d8abb5ab675f6f/672f3e11af442fb4f58b92fb_800x600_simple-min-p-500.jpg 500w,
+                        https://cdn.prod.website-files.com/66fa9907e9d8abb5ab675f6f/672f3e11af442fb4f58b92fb_800x600_simple-min.jpg       800w
+                      "
+                      sizes="(max-width: 479px) 93vw, (max-width: 767px) 95vw, (max-width: 991px) 46vw, 29vw"
+                      class="products_card-img"
+                    />
+                    <div class="products_card-text">
+                      <div class="products_card-tag">
+                        <div
+                          id="w-node-_9204fa81-47ba-2f87-3002-4591670b4da3-670b4da3"
+                          class="badge-lg"
+                        >
+                          <div class="text-size-sm text-weight-semibold">
+                            E-Commerce
+                          </div>
+                        </div>
+                      </div>
+                      <div class="text-size-lg text-weight-bold">
+                        cognicart: AI Shopping &amp; E-Commerce App UI Kit
                       </div>
                       <div class="products_card-metadata">
                         <div class="text-color-gray60">Figma (.fig)</div>
