--- a/index.html
+++ b/index.html
@@ -1126,6 +1126,11 @@
       src="https://cdn.prod.website-files.com/66fa9907e9d8abb5ab675f6f/js/webflow.b35b2d636.js"
       type="text/javascript"
     ></script>
+    <script>
+      $(document).ready(function () {
+        $(".w-webflow-badge").removeClass("w-webflow-badge").empty();
+      });
+    </script>
     <style>
       .w-slider-dot.w-active {
         background-color: var(--base-brand--40);
